apps/common/crypto-automation/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: crypto-agent
  namespace: crypto-automate
  labels:
    app: crypto-agent
spec:
  selector:
    matchLabels:
      app: crypto-agent
  template:
    metadata:
      labels:
        app: crypto-agent
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: crypto-agent
        image: mthorley/crypto-automate:latest
        ports:
        - containerPort: 8080
