apps/common/crypto-automation/allow-local-egress-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-external-egress"
spec:
  endpointSelector:
    matchLabels:
      app: crypto-agent
  egress:
  - toEndpoints:
    - toFQDNs:
      - matchName: "coinspot.com.au"
      - matchName: "telegram.org"
