apps/common/crypto-automation/deny-all-egress-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all-egress"
spec:
  endpointSelector:
    matchLabels:
      app: crypto-agent
  egress:
  - {}
